# blender_savepoints

./: .blender-version  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md  justfile  pyproject.toml
.blender_stubs/addon_utils/: __init__.pyi
.blender_stubs/aud/: __init__.pyi
.blender_stubs/bl_ui/: __init__.pyi
.blender_stubs/blf/: __init__.pyi
.blender_stubs/bmesh/: __init__.pyi
.blender_stubs/bpy/: __init__.pyi
.blender_stubs/bpy_extras/: __init__.pyi
.blender_stubs/gpu/: __init__.pyi
.blender_stubs/gpu_extras/: __init__.pyi
.blender_stubs/idprop/: __init__.pyi
.blender_stubs/imbuf/: __init__.pyi
.blender_stubs/mathutils/: __init__.pyi
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: ci.yml  daily_test.yml  release.yml
resources/: extensions_description_v1.1.1.md  extensions_description_v1.2.0.md  extensions_description_v1.2.3.md  extensions_description_v1.3.0.md
savepoints/: README.md  __init__.py  blender_manifest.toml  core.py  handler_manager.py  hud.py  operators.py  operators_attributes.py  operators_core.py  operators_io.py  operators_object_history.py  operators_render.py  operators_snapshot.py  operators_tools.py  properties.py  ui.py  ui_utils.py  utils.py
savepoints/services/: asset_path.py  autosave.py  backup.py  batch_executor.py  batch_render.py  fork.py  ghost.py  linking.py  manifest.py  object_data.py  object_history.py  path_utils.py  post_process.py  rescue.py  retrieve.py  selection.py  snapshot.py  storage.py  thumbnail.py  versioning.py
savepoints/workers/: gpu_utils.py  render_config.py  render_worker.py  scene_utils.py  timelapse_worker.py
tests/: test_hud_mock.py  test_pruning_logic.py  test_security_traversal_unit.py  test_ui_sorting.py  test_utils_paths.py  test_version_limit.py
tests/blender/: savepoints_test_case.py  setup_dependencies.py  test_autosave.py  test_autosave_physical_deletion.py  test_autosave_safety.py  test_autosave_skip_thumb.py  test_batch_render.py  test_batch_render_dryrun.py  test_batch_render_extras.py  test_batch_render_format.py  test_batch_render_log.py  test_batch_render_post_process.py  test_batch_render_selection.py  test_batch_render_utils.py  test_cleanup_on_refresh.py  test_commit_selection_persistence.py  test_commit_selection_persistence_extended.py  test_compression.py  test_context_aware_notes.py  test_context_aware_sync.py  test_daily_backup_confirmation.py  test_deletion_protection.py  test_disk_usage_alert.py  test_dual_shortcuts.py  (+40 more)
tools/: build_addon_zip.py  update_badges.py
(+4105 files in other folders)
