[project]
name = "savepoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "send2trash==1.8.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2", # TODO remove
    "pyrefly>=0.47.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.9",  # TODO select
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["savepoints"]
