[project]
name = "savepoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "send2trash==1.8.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["savepoints"]

[tool.pyright]
extraPaths = [".blender_stubs"]
include = ["savepoints"]
venvPath = "."
venv = ".venv"

reportMissingImports = true
reportUnusedImport = false
reportInvalidTypeForm = false
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
