[project]
name = "savepoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "send2trash==1.8.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["savepoints"]

[tool.pyright]
extraPaths = [".blender_stubs"]
include = ["savepoints"]
venvPath = "."
venv = ".venv"

reportMissingImports = true
reportUnusedImport = false
reportInvalidTypeForm = false
reportAttributeAccessIssue = "none"
reportArgumentType = "none"

[tool.ty.environment]
extra-paths = [".blender_stubs"]
python-version = "3.11"

[tool.ty.src]
include = ["savepoints"]

[tool.ty.rules]
invalid-type-form = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-method-override = "ignore"
